@@ -22,6 +22,15 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
 <!--#include file="common-top-nav.html" -->
 
+    <h2><a name="changes0941">Changes For This Version (0.94 to 0.941)</a></h2>
+
+	<h3>Fixes</h3>
+	<ul>
+	<li>Added extra code to help discourage browser caching.</li>
+	<li>Issue with '-' DS names again.</li>
+	<li>Removed some extra chatty debugging code from poller_output</li>
+	</ul>
+
     <h2><a name="changes094">Changes For This Version (0.93 to 0.94)</a></h2>
 
 <p>0.94 was released early, to fix the one small issue caused by files moving around in the recent Cacti 0.8.7 release. However, there 
